# prototype

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  troubleshooting.md  vscode-profile-2022-03-18-14-41-23.cpuprofile
client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
client/test/: model.test.ts
lambda/: env_to_sam.py  samconfig.toml  template.yaml
lambda/python_h2o/: app.py  requirements.txt
lambda/python_mongo/: requirements.txt  test.py
lambda/python_profiler/: requirements.txt
lambda/r_handler/: Dockerfile  bootstrap.R  functions.R  runtime.R
lambda/solver_search/: app.py
server/: package-lock.json  package.json  server.js  tsconfig.json  webpack.config.js
server-R/: functions.R
server-node/: Dockerfile  package-lock.json  package.json  server.js  tsconfig.json  webpack.config.js
server-node/client/: package.json  (+3 more)
server-python/: Dockerfile  requirements.txt
tworaven-profiler-python/: setup.cfg
tworaven-solver-python/: README.md  setup.cfg  setup.py
tworaven-solver-python/src/tworaven_solver/: fit.py  search.py  solution.py
tworaven-solver-python/src/tworaven_solver/libraries/: library_cross_sectional.py  library_prophet.py  library_sklearn.py  library_statsmodels.py
tworaven-solver-python/src/tworaven_solver/nn_models/: NlayerMLP.py
tworaven-solver-python/src/tworaven_solver/torch_model/: linear_model.py  train.py
tworaven-solver-python/src/tworaven_solver/transformers/: general.py
tworaven-solver-python/test/: test_preprocess.py  test_statsmodels.py  test_sunspots.py
(+163 files in other folders)
