[metadata]
name = tworaven_profiler
version = 0.0.0+development
author = TwoRavens
description = data profiler
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir =
    = src

[options.packages.find]
where = src

[tool:pytest]
testpaths =
    test