[metadata]
name = tworaven_solver
version = 0.0.0+development

[project]
author = TwoRavens
description = automl
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir =
    = src

install_required =
    joblib
    requests
    torch
    scikit-learn
    pydateinfer # https://github.com/jeffreystarr/dateinfer/pull/11#issuecomment-837349003
    prophet
    statsmodels


[options.packages.find]
where = src

[tool:pytest]
testpaths =
    test